--- a/homeworks/hw5/assets/css/style.css
+++ b/homeworks/hw5/assets/css/style.css
@@ -1,3 +1,8 @@
+body {
+    display: flex;
+    flex-direction:row;
+}
+
 .nav{
     /* [Problem 1] 
         FIXME: Set the width of the nav class to 85px. */
