--- a/homeworks/hw6/assets/css/style.css
+++ b/homeworks/hw6/assets/css/style.css
@@ -173,7 +173,7 @@
 	animation-duration: 4s;
 	animation-direction: reverse;
 }
-.loader.four .ring.one .arc {
+.loader.four .ring.three .arc {
 	animation-duration: 6s;
 }
 
