--- a/final/assets/css/style.css
+++ b/final/assets/css/style.css
@@ -1,16 +1,55 @@
-
+html, body {width:100%; height:100%; margin:0;}
 body{
-    margin:0;
-    /* display:-webkit-box;
-    font-family:'Lato', 'Times New Roman', Times, serif; */
-    /* height:100%; */
+    font-family: 'DM Sans', sans-serif;
     background-color: white;
     color: #2b2118;
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
 }
 
 #map{
+    display: flex;
     margin-left: auto;
     margin-right: auto;
+    margin-top: auto;
+    margin-bottom: auto;
+    height: 70%;
+    width: 70%;
+}
+
+/* Create a top header that includes the title, slogan and a split section for top navigation */
+#top-bar {
+    overflow: hidden;
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: center;
+    margin-top: 2%;
+    margin-left:2%;
+    width: 97%;
+
+}
+
+.top-right {
+    display: flex;
+    flex-direction: row;
+    margin-left:auto;
+}
+#top-bar .name {
+    /* float: left; */
+    color:black;
+    font-size: 48px;
+}
+
+#top-bar .slogan {
+    color:black;
+    padding-left: 1%;
+    font-size: 24px;
+}
+
+#top-bar a {
+    /* float:right; */
+    color: #0F50E9;
+    padding-right: 30px;
+    font-size: 24px;
 }
