--- a/final/assets/css/aboutus.css
+++ b/final/assets/css/aboutus.css
@@ -1,16 +1,11 @@
-/* * { 
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-} */
 html, body {width:100%; height:100%; margin:0; padding: 0;}
 
-html {
-    /* animation-name: slide;
+/* html {
+    animation-name: slide;
     animation-duration: 3s;
-    animation-iteration-count: 1; */
+    animation-iteration-count: 1;
 
-}
+} */
 body{
     font-family: 'DM Sans', sans-serif;
     color: #2b2118;
@@ -21,7 +16,7 @@ body{
     justify-content: space-between;
 
     animation-name: slide;
-    animation-duration: 1s;
+    animation-duration: 1.5s;
     animation-iteration-count: 1;
     animation-timing-function: ease-in;
 
@@ -67,17 +62,37 @@ body{
     font-size: 48px;
 }
 
+@media (max-width: 1100px) {
+    #top-bar .name {
+        font-size: 32px;
+    }
+}
+
 #top-bar .slogan {
     color:#FFB688;
     padding-left: 1%;
     font-size: 24px;
 }
 
+@media (max-width: 1100px) {
+    #top-bar .slogan {
+        font-size: 20px;
+    }
+}
+
+#aboutus {
+    text-decoration: none;
+}
 #top-bar a {
     /* float:right; */
     color: #0F50E9;
     padding-right: 30px;
     font-size: 24px;
+}
+@media (max-width: 1100px) {
+    #top-bar a {
+        font-size: 20px;
+    }
 }
 
 #text {
@@ -93,8 +108,15 @@ body{
     font-size: 32px;
     margin-left: auto;
     margin-right: auto;
+    margin-bottom:2%;
     font-weight: 100;
-} 
+}
+
+@media (max-width: 1100px) {
+    .clickhere {
+        font-size: 26px;
+    }
+}
 
 .get-to-know{
     color: rgb(2, 2, 2);
@@ -115,7 +137,12 @@ body{
     border-radius: 25px; 
     background-image: linear-gradient(to top, #D9D9D9 132px, rgba(0,0,0,0) 132px);
     opacity: 0.3;
-
+}
+@media (max-width: 1100px) {
+    .get-to-know-box{
+        width: 250px;
+        height: 350px;  
+    }
 }
 .get-to-know-thoughts {
     margin-top: auto;
@@ -125,18 +152,26 @@ body{
     opacity: 0;
 }
 
-/* .get-to-know-box-image{
-    height: 300px;
-    width: 300px;
-} */
+@media (max-width: 1100px) {
+    .get-to-know-thoughts {
+        font-size: 20px;
+    }
+}
 
 .get-to-know .get-to-know-image {
     width: 300px;
     height: 300px;
     border-top-left-radius: 25px;
     border-top-right-radius: 25px;
-
 } 
+
+@media (max-width: 1100px) {
+    .get-to-know .get-to-know-image {
+        width: 250px;
+        height: 250px;  
+    }
+}
+
 .get-to-know-box:hover {
     opacity: 0.8;
 }
