--- a/final/assets/css/style.css
+++ b/final/assets/css/style.css
@@ -5,6 +5,7 @@ body{
     color: #2b2118;
     display: flex;
     flex-direction: column;
+    justify-content: space-between;
 }
 
 #map{
@@ -35,10 +36,17 @@ body{
     flex-direction: row;
     margin-left:auto;
 }
+
+
 #top-bar .name {
     /* float: left; */
     color:black;
     font-size: 48px;
+}
+@media (max-width: 1100px) {
+    #top-bar .name {
+        font-size: 32px;
+    }
 }
 
 #top-bar .slogan {
@@ -47,9 +55,39 @@ body{
     font-size: 24px;
 }
 
+@media (max-width: 1100px) {
+    #top-bar .slogan {
+        font-size: 20px;
+    }
+}
+
 #top-bar a {
     /* float:right; */
     color: #0F50E9;
     padding-right: 30px;
     font-size: 24px;
 }
+
+@media (max-width: 1100px) {
+    #top-bar a {
+        font-size: 20px;
+    }
+}
+
+#home {
+    text-decoration: none;
+}
+
+
+#bottom-text {
+    margin-left: auto;
+    margin-right: auto;
+    font-size: 32px;
+    margin-bottom:2%;
+}
+@media (max-width: 1100px) {
+    #bottom-text {
+        font-size: 26px;
+    }
+}
+
