--- a/final/assets/css/style.css
+++ b/final/assets/css/style.css
@@ -49,6 +49,12 @@ body{
     }
 }
 
+@media (max-height: 800px) {
+    #top-bar .name {
+        font-size: 32px;
+    }
+}
+
 #top-bar .slogan {
     color:black;
     padding-left: 1%;
@@ -56,6 +62,11 @@ body{
 }
 
 @media (max-width: 1100px) {
+    #top-bar .slogan {
+        font-size: 20px;
+    }
+}
+@media (max-height: 1100px) {
     #top-bar .slogan {
         font-size: 20px;
     }
@@ -74,6 +85,12 @@ body{
     }
 }
 
+@media (max-height: 800px) {
+    #top-bar .slogan {
+        font-size: 20px;
+    }
+}
+
 #home {
     text-decoration: none;
 }
@@ -86,6 +103,12 @@ body{
     margin-bottom:2%;
 }
 @media (max-width: 1100px) {
+    #bottom-text {
+        font-size: 26px;
+    }
+}
+
+@media (max-height: 800px) {
     #bottom-text {
         font-size: 26px;
     }
